Changes from todos to orders.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,6 +8,6 @@
 // components
 @import "components/container";
 @import "components/page-title";
-@import "components/todo";
+@import "components/order";
 @import "components/page-actions";
 @import "components/callout-auth";
